--- a/WebApiTodo/WebApiTodo/appsettings.json
+++ b/WebApiTodo/WebApiTodo/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WorkOrderDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,4 +8,6 @@
     }
   },
   "AllowedHosts": "*"
+
+
 }
