models and more

--- a/DatabasTodo/WebApiTodo/appsettings.Development.json
+++ b/DatabasTodo/WebApiTodo/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "ToDoProj":  "Server=(localdb)\\mssqllocaldb;Database=ToDoProj;Trusted_Connection=true"
   }
 }
