--- a/XamarinTodo/XamarinTodo/XamarinTodo/XamarinTodo.csproj
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/XamarinTodo.csproj
@@ -19,6 +19,12 @@
     <EmbeddedResource Update="Pages\AcceptOrderPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Pages\OrderAcceptetPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Pages\OrderDoneAddInfoPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\OrderOverviewPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
