--- a/WebApiTodo/WebApiTodo/appsettings.json
+++ b/WebApiTodo/WebApiTodo/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Data Source=STORMIE;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "ConnectionString": "Data Source=STORMIE;Initial Catalog=ToDoProj;Integrated Security=False;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
