--- a/WebApiTodo/WebApiTodo/appsettings.json
+++ b/WebApiTodo/WebApiTodo/appsettings.json
@@ -1,4 +1,5 @@
 {
+  //"ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ToDoProj;;Integrated Security=True;Trusted_Connection=True",
   "ConnectionString": "Data Source=STORMIE;Initial Catalog=ToDoProj;Integrated Security=SSPI;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
