--- a/XamarinTodo/XamarinTodo/XamarinTodo/XamarinTodo.csproj
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/XamarinTodo.csproj
@@ -41,4 +41,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Services\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
