--- a/WebApiTodo/WebApiTodo/appsettings.json
+++ b/WebApiTodo/WebApiTodo/appsettings.json
@@ -1,13 +1,14 @@
 {
-  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=WorkOrderDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "AllowedHosts": "*",
+  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
-
-
+  }
 }
+
+
+//Daniel connstring: Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
