--- a/WebApiTodo/WebApiTodo/appsettings.json
+++ b/WebApiTodo/WebApiTodo/appsettings.json
@@ -1,6 +1,7 @@
 {
   //"ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ToDoProj;;Integrated Security=True;Trusted_Connection=True",
-  "ConnectionString": "Data Source=STORMIE;Initial Catalog=ToDoProj;Integrated Security=SSPI;Trusted_Connection=True;",
+  //"ConnectionString": "Data Source=STORMIE;Initial Catalog=ToDoProj;Integrated Security=SSPI;Trusted_Connection=True;",
+  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,3 +13,4 @@
 
 
 }
+//Daniel "ConnectionString": "Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
