--- a/WebApiTodo/WebApiTodo/appsettings.json
+++ b/WebApiTodo/WebApiTodo/appsettings.json
@@ -13,4 +13,4 @@
 
 
 }
-//Daniel "ConnectionString": "Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+//Daniel "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
