Added Andreas Comment

--- a/WebApiTodo/WebApiTodo/appsettings.json
+++ b/WebApiTodo/WebApiTodo/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "AllowedHosts": "*"
-
-
 }
 //Daniel "ConnectionString": "Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
+//Andreas "Data Source=LAPTOP-V95PQM9S;Initial Catalog=ToDoProj;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
