--- a/WebApiTodo/WebApiTodo/Properties/launchSettings.json
+++ b/WebApiTodo/WebApiTodo/Properties/launchSettings.json
@@ -3,16 +3,14 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:55058",
-      "sslPort": 44374
+      "applicationUrl": "http://localhost:52428/",
+      "sslPort": 44394
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Orders",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +18,6 @@
     "WebApiTodo": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Orders",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
