--- a/XamarinTodo/XamarinTodo/XamarinTodo/XamarinTodo.csproj
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/XamarinTodo.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <UserSecretsId>ae2f67f7-13b9-4aba-a2fe-633c6a1a36d4</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
