--- a/NewBlazorTodo/NewBlazorTodo/Client/NewBlazorTodo.Client.csproj
+++ b/NewBlazorTodo/NewBlazorTodo/Client/NewBlazorTodo.Client.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Shared\NewBlazorTodo.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
