Implementerade ENUM logik och tog bort Ordercomplete samt order accept

--- a/NewBlazorTodo/NewBlazorTodo/Client/NewBlazorTodo.Client.csproj
+++ b/NewBlazorTodo/NewBlazorTodo/Client/NewBlazorTodo.Client.csproj
@@ -16,4 +16,9 @@
     <ProjectReference Include="..\Shared\NewBlazorTodo.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Order\Orders_Not_Accepted\" />
+    <Folder Include="Pages\Order\Orders_Done\" />
+  </ItemGroup>
+
 </Project>
