Added images to OrderOverView.

--- a/XamarinTodo/XamarinTodo/XamarinTodo.Android/XamarinTodo.Android.csproj
+++ b/XamarinTodo/XamarinTodo/XamarinTodo.Android/XamarinTodo.Android.csproj
@@ -99,13 +99,22 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\drawable\jobseeking.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XamarinTodo\XamarinTodo.csproj">
       <Project>{6A4ABEED-31CF-4789-96D4-8F08F62766B7}</Project>
       <Name>XamarinTodo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-anydpi-v26\pin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\officebuilding.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
